PyMaker/datas/object2/RawHTML/i1/Python_DOC_referPages.how-to-subtract-each-integer-in-an-array-from-the-previous-integer-and-find-the.txt
<div class="post-text" itemprop="text">
<p>I have a numpy array that has the size (122,) and is made up of integers</p>
<p>I want to use the following formula:</p>
<p><a href="https://i.stack.imgur.com/3U4us.png" rel="nofollow noreferrer"><img alt="enter image description here" src="https://i.stack.imgur.com/3U4us.png"/></a></p>
<p>I tried doing </p>
<pre><code>value=sum((I[:-1]-I[1:])**2))
</code></pre>
<p>This line itself does not create an error, but whenever I try to use this value in the bigger formula it gives an invalid syntax error.  </p>
<p>I want to use this value to plug into a bigger formula</p>
<p><a href="https://i.stack.imgur.com/0ZSqa.png" rel="nofollow noreferrer"><img alt="enter image description here" src="https://i.stack.imgur.com/0ZSqa.png"/></a></p>
<p>I would like an answer of how to plug my array into this formula
For instance, the code for the second term in the bigger formula, I have written as follows:</p>
<pre><code>calc = np.linalg.norm((RR_intervals[:-1])-(RR_intervals[1:]))                                                                     

p=(n-1)*sqrt(2)
o=(1/p)*calc
t=o**2
</code></pre>
<p>If I try and combine this with the first term I get an invalid syntax error</p>
<p>Full interpreter message:
runfile('/home/user_1/p01.py', wdir='/home/user_1')
Traceback (most recent call last):</p>
<p>File "/home/user_1/.local/lib/python3.6/site-packages/IPython/core/interactiveshell.py", line 3291, in run_code
    exec(code_obj, self.user_global_ns, self.user_ns)</p>
<p>File "", line 1, in 
    runfile('/home/user_1/p01.py', wdir='/home/user_1')</p>
<p>File "/usr/lib/python3/dist-packages/spyder/utils/site/sitecustomize.py", line 705, in runfile
    execfile(filename, namespace)</p>
<p>File "/usr/lib/python3/dist-packages/spyder/utils/site/sitecustomize.py", line 102, in execfile
    exec(compile(f.read(), filename, 'exec'), namespace)</p>
<p>File "/home/user_1/p01.py", line 91
    dispersion = (sqrt(m-t))
             ^
SyntaxError: invalid syntax</p>
</div>
<div class="post-text" itemprop="text">
<p>You can do using list :</p>
<pre><code>a = list(numpy_array)
sum([(i-j)**2 for i,j in zip(a,a[1:])])
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>This should do it:</p>
<pre><code>result = sum((ar[i] - ar[i + 1])**2 for i in range(len(ar) - 1))
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Using numpy:</p>
<pre><code>(((a-np.roll(a,1))**2)[1:]).sum()
</code></pre>
<p>Note: The <code>[1:]</code> is necessary because <code>roll</code> reinserts the element at the beginning of the array.</p>
</div>
<span class="comment-copy">You're code seems fine to me. There are no syntax errors here</span>
<span class="comment-copy">How exactly is <code>formula</code> used then? (As in, you do realize this is not a function, but a value, right?)</span>
<span class="comment-copy">Please provide the code of the bigger formula and the error you get</span>
<span class="comment-copy">The error I get is invalid syntax</span>
<span class="comment-copy">I have split the code for the bigger formula into smaller sections, I will include the code</span>
<span class="comment-copy">This is an alternative to his own solution, which works fine IMO</span>
<span class="comment-copy">Aren't all alternatives to his solution? He said himself the code works, without detailing what error he gets.</span>
<span class="comment-copy"><code>it gives an invalid syntax error</code>, for some reason. Yet I see no syntax errors at all, it seems completely valid</span>
<span class="comment-copy">"but whenever I try to use <code>formula</code> in my code..." I start to believe what he actually wants is not the value, but a function that computes said value to plug in a bigger computation. Asked in a comment to the question, let's see..</span>
